--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ beautifulsoup4==4.12.2
 black==23.9.1
 blinker==1.6.2
 blis==0.7.10
+scikit-learn
 Brotli==1.1.0
 cachetools==5.3.1
 catalogue==2.0.9
