--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,9 @@ docutils==0.21.2
 ipython==8.12.3
 matplotlib==3.9.2
 streamlit==1.39.0
+scikit-learn
+numpy==1.19.5
+scipy==1.6.0
+joblib==1.2.0
+threadpoolctl==3.1.0
 
