--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,80 @@
+aiobotocore==2.15.2
+aiohttp-retry==2.9.0
 altair==5.4.1
 ansi2html==1.9.2
 appdirs==1.4.4
 atomicwrites==1.4.0
+backports.weakref==1.0.post1
+botocore==1.35.36
+cachetools==5.5.0
+clyent==1.2.2
+conda-verify==3.4.2
 daal4py==2023.1.1
 dash==2.18.1
+dash-bootstrap-components==1.6.0
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
 docopt==0.6.2
 docutils==0.21.2
+et-xmlfile==1.1.0
+gitdb==4.0.11
+GitPython==3.1.43
+google-ai-generativelanguage==0.6.6
+google-api-core==2.19.1
+google-api-python-client==2.142.0
+google-auth==2.34.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.7.2
+googleapis-common-protos==1.63.2
+grpcio==1.66.0
+grpcio-status==1.62.3
+httplib2==0.22.0
+inflection==0.5.1
 ipython==8.12.3
+jsonpointer==2.1
+jupyter-dash==0.4.2
+lib==4.0.0
+lxml==5.2.1
+matplot==0.1.9
 matplotlib==3.9.2
+mkl-service==2.4.0
+narwhals==1.9.0
+nh3==0.2.18
+opencv-python==4.10.0.84
+opt-einsum==3.3.0
+pep8==1.7.1
+pgmpy==0.1.26
+pipreqs==0.5.0
+ply==3.11
+proto-plus==1.24.0
+protobuf==4.25.4
+pyasn1-modules==0.2.8
+pydeck==0.9.1
+PyDispatcher==2.0.5
+pyloco==0.0.139
+pyls-spyder==0.4.0
+PyQt5==5.15.10
+PyQtWebEngine==5.15.6
+pywin32==305.1
+readme_renderer==44.0
+retrying==1.3.4
+rfc3986==2.0.0
+rsa==4.9
+scikit-learn-intelex==20230426.121932
+SimpleWebSocketServer==0.1.2
+smmap==5.0.1
 streamlit==1.39.0
-numpy==1.19.5
-scipy==1.6.0
-joblib==1.2.0
-threadpoolctl==3.1.0
+TBB==0.2
+toml==0.10.2
+torch==2.4.0
+twilio==9.3.6
+twine==5.1.1
+typing==3.7.4.3
+uritemplate==4.1.1
+ushlex==0.99.1
+webencodings==0.5.1
+xgboost==2.1.1
+yarg==0.1.9
+
 
