--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ matplot==0.1.9
 matplotlib==3.9.2
 narwhals==1.9.0
 nh3==0.2.18
+openpyxl==3.1.2
 opencv-python==4.10.0.84
 opt-einsum==3.3.0
 pep8==1.7.1
